.provarCaches/00D6C0000000xA6UAI/objects/sked__Activity__c.object
<CustomObject>
    <fields>
        <fullName>sked__Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked__Copied_From_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Copied From Id</label>
        <referenceTo>sked__Activity__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked__End__c</fullName>
        <label>End</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sked__Event_Id__c</fullName>
        <externalId>true</externalId>
        <label>Event Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked__GeoLocation__c</fullName>
        <label>GeoLocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>sked__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>sked__Location__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked__Notes__c</fullName>
        <label>Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked__Quantity__c</fullName>
        <description>The number of Resources required.</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked__Resource__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Resource</label>
        <referenceTo>sked__Resource__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked__Schedule_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Schedule Template</label>
        <referenceTo>sked__Schedule_Template__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked__Start__c</fullName>
        <label>Start</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sked__Templated_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Templated Activity</label>
        <referenceTo>sked__Templated_Activity__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked__Timezone__c</fullName>
        <label>Timezone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Activity</label>
    <listViews>
        <fullName>sked__AllActivities</fullName>
        <columns>NAME</columns>
        <columns>sked__Resource__c</columns>
        <columns>sked__Type__c</columns>
        <columns>sked__Start__c</columns>
        <columns>sked__End__c</columns>
        <columns>sked__Address__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ACT-{0000}</displayFormat>
        <label>Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>sked__DateRangeValidation</fullName>
        <active>false</active>
        <description>Minutes from start to end must be longer than 0 but no greater than 24 hrs</description>
        <errorConditionFormula>OR(
   ROUND(((sked__End__c - sked__Start__c) * 1440),0) &gt; 1440,
   ROUND(((sked__End__c - sked__Start__c) * 1440),0) &lt;= 0.0
)</errorConditionFormula>
        <errorMessage>Activity date range must be greater than zero but no greater than 24 hrs</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sked__QuantityNullOrPositive</fullName>
        <active>true</active>
        <description>Quantity of Resources required must be null or greater than 0</description>
        <errorConditionFormula>AND( NOT( ISNULL( sked__Quantity__c ) ) , sked__Quantity__c  &lt;= 0 )</errorConditionFormula>
        <errorDisplayField>sked__Quantity__c</errorDisplayField>
        <errorMessage>Quantity of Resources required must be null or greater than 0</errorMessage>
    </validationRules>
</CustomObject>